--- a/app/src/main/res/layout/viewholder.xml
+++ b/app/src/main/res/layout/viewholder.xml
@@ -17,6 +17,15 @@
         android:layout_height="match_parent"
         android:id="@+id/Title"/>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/channelTitle" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/image_video" />
 
 </LinearLayout>
 </android.support.v7.widget.CardView>
